--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <script src="https://www.desmos.com/api/v1.6/calculator.js?apiKey=default"></script>
 <head>
   <title>Algebra Solver</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nerdamer/1.1.9/nerdamer.core.min.js"></script>
