--- a/index.html
+++ b/index.html
@@ -1,133 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Math Solver & Grapher</title>
-
-  <!-- Nerdamer for solving algebra -->
+  <title>Algebra Solver</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nerdamer/1.1.9/nerdamer.core.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nerdamer/1.1.9/Algebra.min.js"></script>
-
-  <!-- Desmos Graphing Calculator -->
-  <script src="https://www.desmos.com/api/v1.6/calculator.js?apiKey=default"></script>
-
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      padding: 30px;
-      margin: 0;
+      padding: 20px;
     }
-
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: #fff;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      color: #333;
-    }
-
     input, button {
-      width: 100%;
-      font-size: 16px;
-      padding: 10px;
-      margin-top: 10px;
-      box-sizing: border-box;
-    }
-
-    button {
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    .graph-box {
-      width: 100%;
-      height: 400px;
-      border: 1px solid #ccc;
-      margin-top: 15px;
-      border-radius: 5px;
-    }
-
-    .section {
-      margin-top: 40px;
+      font-size: 18px;
+      padding: 8px;
+      margin: 10px 0;
     }
   </style>
 </head>
 <body>
-
-  <div class="container">
-    <h2>🧮 Algebra Equation Solver</h2>
-    <input id="equation" placeholder="Enter equation (e.g. 2x + 3 = 7)">
-    <button onclick="solveEquation()">Solve</button>
-    <p><strong>Solution:</strong> <span id="output">—</span></p>
-
-    <h3>📈 Graph of Equation</h3>
-    <div id="equation-graph" class="graph-box"></div>
-
-    <div class="section">
-      <h2>📊 Graph Any Expression</h2>
-      <input id="graph-input" placeholder="Enter expression (e.g. y = sin(x) or x^2 + 3)">
-      <button onclick="graphCustom()">Graph It</button>
-      <div id="custom-graph" class="graph-box"></div>
-    </div>
-  </div>
+  <h2>Algebra Solver</h2>
+  <input id="equation" placeholder="Enter equation (e.g. 2x+3=7)" size="40">
+  <br>
+  <button onclick="solveEquation()">Solve</button>
+  <p><strong>Solution:</strong> <span id="output"></span></p>
 
   <script>
-    // Initialize Desmos calculators
-    const graph1 = Desmos.GraphingCalculator(document.getElementById('equation-graph'));
-    const graph2 = Desmos.GraphingCalculator(document.getElementById('custom-graph'));
-
     function solveEquation() {
       const eq = document.getElementById("equation").value;
-      const output = document.getElementById("output");
-
       const parts = eq.split("=");
       if (parts.length !== 2) {
-        output.innerText = "❌ Please enter a valid equation (like 2x + 3 = 7)";
+        document.getElementById("output").innerText = "Please enter a valid equation (like 2x+3=7)";
         return;
       }
 
       try {
-        const lhs = parts[0];
-        const rhs = parts[1];
-
-        const expr = `${lhs} - (${rhs})`; // Convert to "lhs - rhs = 0"
-        const solution = nerdamer.solve(expr, 'x').toString();
-
-        output.innerText = "x = " + solution;
-
-        // Graph both sides of the equation
-        graph1.setExpressions([
-          { id: 'left', latex: lhs, color: Desmos.Colors.BLUE },
-          { id: 'right', latex: rhs, color: Desmos.Colors.RED }
-        ]);
-
+        const solution = nerdamer.solve(parts[0] + '-(' + parts[1] + ')', 'x').toString();
+        document.getElementById("output").innerText = "x = " + solution;
       } catch (err) {
-        output.innerText = "❌ Error solving equation.";
-      }
-    }
-
-    function graphCustom() {
-      const expr = document.getElementById("graph-input").value;
-      try {
-        graph2.setExpressions([{ id: 'custom', latex: expr }]);
-      } catch (err) {
-        alert("❌ Invalid expression for graphing.");
+        document.getElementById("output").innerText = "Error solving equation.";
       }
     }
   </script>
-
 </body>
 </html>
